add validation Data & edit conf file

--- a/trainer/config_files/en_filtered_config.yaml
+++ b/trainer/config_files/en_filtered_config.yaml
@@ -3,7 +3,7 @@ symbol: ''
 lang_char: '٠١٢٣٤٥٦٧٨٩'
 experiment_name: 'en_filtered'
 train_data: 'all_data/training_data'
-valid_data: 'all_data/validation'
+valid_data: 'all_data/validation_data'
 manualSeed: 1111
 workers: 6
 batch_size: 32 #32
