--- a/trainer/config_files/en_filtered_config.yaml
+++ b/trainer/config_files/en_filtered_config.yaml
@@ -7,13 +7,10 @@ valid_data: 'all_data/validation_data'
 manualSeed: 1111
 workers: 6
 batch_size: 32 #32
-<<<<<<< HEAD
 num_iter: 40000
-=======
 num_iter: 80000
->>>>>>> 7303b98f2ab48eda8ff2120e44d63c37c36eb0e6
 valInterval: 5000
-saved_model: '' #'saved_models/en_filtered/iter_300000.pth'
+saved_model: 'saved_models/en_filtered/iter_80000.pth'
 FT: True
 optim: adam # default is Adadelta
 lr: 0.01
